# PySlideGenerator

./: MANIFEST.in  PySlidesGenerator.py  README.md  pyproject.toml  script.js  setup.cfg  setup.py  styles.css
