# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

[project]
name = "PySlidesGenerator"
version = "0.0.2"
dependencies = []
authors = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
maintainers = [
    {name = "Maurice Lambert", email = "mauricelambert434@gmail.com"},
]
description = 'little GUI to generate my slides'
readme = {file = "README.md", content-type = "text/markdown"}
# url = "https://github.com/mauricelambert/PySlidesGenerator"
# download-url = "https://mauricelambert.github.io/info/python/code/PySlidesGenerator.pyz"
classifiers = [
    "Topic :: System",
    "Topic :: Software Development :: Libraries",
    "Environment :: Console",
    "Topic :: System :: Shells",
    'Operating System :: POSIX',
    "Natural Language :: English",
    "Topic :: System :: Networking",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Topic :: System :: System Shells",
    'Operating System :: MacOS :: MacOS X',
    "Programming Language :: Python :: 3.8",
    'Operating System :: Microsoft :: Windows',
    "Topic :: System :: Systems Administration",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
]
keywords = ['slides', 'presentations', 'slides-generator']
license = {text = "GPL-3.0 License"}
requires-python = ">=3.8"

[project.scripts]
PySlidesGenerator = "PySlidesGenerator:main"

[project.urls]
"Github" = "https://github.com/mauricelambert/PySlidesGenerator"
"Documentation" = "https://mauricelambert.github.io/info/python/code/PySlidesGenerator.html"
"Python Executable" = "https://mauricelambert.github.io/info/python/code/PySlidesGenerator.pyz"
"Windows Executable" = "https://mauricelambert.github.io/info/python/code/PySlidesGenerator.exe"

[tool.setuptools]
include-package-data = true
platforms = ['Windows', 'Linux', "MacOS"]
py-modules = ['PySlidesGenerator']
packages = []
script-files = []

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
